--- a/static/index.html
+++ b/static/index.html
@@ -20,18 +20,37 @@
         }).addTo(map);
 
         let markers = {};
+        var circle3=L.circle([39.226876513413934, -76.81521777415809], {
+            color: 'red',
+            fillColor: '#f03',
+            fillOpacity: 0.5,
+            radius: 8000
+        }).addTo(map);
+
+        var circle2=L.circle([39.226876513413934, -76.81521777415809], {
+            color:"blue",
+            fillOpacity: 0.3,
+            radius: 16000
+        }).addTo(map)
+
+        var circle1=L.circle([39.226876513413934, -76.81521777415809], {
+            color:"black",
+            fillColor: "#999999",
+            fillOpacity: 0.3,
+            radius: 32000
+        }).addTo(map)
 
         function updateMap() {
             let bounds = map.getBounds();
             let url = `/api/latest_tracks?min_lat=${bounds.getSouth()}&max_lat=${bounds.getNorth()}&min_lon=${bounds.getWest()}&max_lon=${bounds.getEast()}&t=${Date.now()}`;
 
-            fetch(url, { cache: 'no-store'})
+            fetch(url)
                 .then(response => response.json())
                 .then(tracks => {
                     console.log('Received tracks:', tracks);
 
                     let currentTime = Math.floor(Date.now() /1000);
-                    let tenMinutesAgo = currentTime-600;
+                    let fiveMinutesAgo = currentTime-300;
                     
                     // Group tracks by ICAO24 and keep only the most recent entry
                     let latestTracks = tracks.reduce((acc, track) => {
@@ -44,7 +63,7 @@
                     Object.values(latestTracks).forEach(track => {
                         let id = track.icao24;
                         let latLng = [track.latitude, track.longitude];
-                        let popup = `ICAO24: ${id}<br>Callsign: ${track.callsign}<br>Altitude: ${track.altitude}<br>Velocity: ${track.velocity}<br>Timestamp: ${new Date(track.timestamp * 1000).toLocaleString()}`;
+                        let popup = `ICAO24: ${id}<br>Priority: ${track.priority}<br>Callsign: ${track.callsign}<br>Altitude: ${track.altitude}<br>Velocity: ${track.velocity}<br>Timestamp: ${new Date(track.timestamp * 1000).toLocaleString()}`;
                         if(track.timestamp >=tenMinutesAgo) {
                             if (!markers[id]) {
                                 console.log('Adding new marker:', id);
@@ -58,7 +77,7 @@
                     });
 
                     Object.keys(markers).forEach(id => {
-                        if (!latestTracks[id] || latestTracks[id].timestamp < tenMinutesAgo) {
+                        if (!latestTracks[id] || latestTracks[id].timestamp < fiveMinutesAgo) {
                             console.log('Removing marker:', id);
                             map.removeLayer(markers[id]);
                             delete markers[id];
